Fix tag icon alignment

--- a/css/post-sidebar.css
+++ b/css/post-sidebar.css
@@ -71,9 +71,9 @@
 
 #post-sidebar-tag-icon {
     width: 23.3px;
-    height: 24.1px;
+    height: 32.1px;
     margin-right: 15px;
-    align-self: center;
+    padding-top: 8px;
 }
 
 .post-sidebar-document-link {
